# realtime-stock-sentiment-ml-pipeline

./: .env.example  .gitignore  README.md  aapl_daily.csv  docker-compose.yml  file.json  pyproject.toml
dags/: fetch_stock_dag.py
docker/: Dockerfile  airflow.Dockerfile  requirements.sh  requirements_airflow.txt
realtime_stock_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/data/: appl_interaday.csv  data_cleaner.py  fetch.py  fetcher.py  ingest.py  try.csv
src/db/: connection.py  schema.sql
src/utilities/: logger.py
utilities/: logger.py
