[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime_stock_pipeline"
version = "0.1.0"
requires-python = ">=3.10"
description = "Realtime stock sentiment ML pipeline"
dependencies = [
  "pandas",
  "numpy",
  "requests",
  "python-dotenv",
  "SQLAlchemy>=2.0",
  "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
